# WiFI_Spoofer

./: .gitignore  README.md  build_exe.bat  compile.bat  compile_mac.sh  pyproject.toml  requirements.txt  wifi-cut.spec
tests/: test_gateway.py  test_platform_check.py  test_scanner.py  test_spoofer.py  test_throttler.py
wifi_cut/: __main__.py  cli.py  gateway.py  platform_check.py  scanner.py  session.py  spoofer.py  throttler.py  tui.py  ui_helpers.py
